@@ -15,6 +15,8 @@ bzr-0.0.3  NOT RELEASED YET
       through the command at the moment, but the inventory support is
       there.)
 
+    * New "renames" command lists files renamed since base revision.
+
   PORTABILITY:
 
     * Workaround for difflib bug in Python 2.3 that causes an
